--- a/.tekton/docker-push.yaml
+++ b/.tekton/docker-push.yaml
@@ -1,27 +1,27 @@
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
-  name: "tssc-app1-svc-on-push"
+  name: "py3ocp7ai-svc-on-push"
   annotations:
     pipelinesascode.tekton.dev/on-event: "[push]"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
     pipelinesascode.tekton.dev/max-keep-runs: "2"
-    pipelinesascode.tekton.dev/pipeline: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/pipelines/docker-build-rhtap.yaml"
+    pipelinesascode.tekton.dev/pipeline: "https://raw.githubusercontent.com/opdev-tssc-demo/tssc-app1-src/refs/heads/main/.tekton/docker-build-rhtap.yaml"
     pipelinesascode.tekton.dev/task-0: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/init.yaml"
     pipelinesascode.tekton.dev/task-1: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/git-clone.yaml"
     pipelinesascode.tekton.dev/task-2: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/buildah-rhtap.yaml"
     pipelinesascode.tekton.dev/task-3: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/acs-image-check.yaml"
-    pipelinesascode.tekton.dev/task-4: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/acs-image-scan.yaml"
+    pipelinesascode.tekton.dev/task-4: "https://raw.githubusercontent.com/opdev-tssc-demo/tssc-app1-src/refs/heads/main/.tekton/acs-image-scan.yaml"
     pipelinesascode.tekton.dev/task-5: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/acs-deploy-check.yaml"
-    pipelinesascode.tekton.dev/task-6: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/update-deployment.yaml"
+    pipelinesascode.tekton.dev/task-6: "https://raw.githubusercontent.com/opdev-tssc-demo/tssc-app1-src/refs/heads/main/.tekton/update-deployment.yaml"
     pipelinesascode.tekton.dev/task-7: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/show-sbom-rhdh.yaml"
     pipelinesascode.tekton.dev/task-8: "https://raw.githubusercontent.com/redhat-appstudio/tssc-sample-pipelines/release-v1.7.x/pac/tasks/summary.yaml"
   labels:
-    argocd/app-name: tssc-app1-svc
-    janus-idp.io/tekton: tssc-app1-svc
-    backstage.io/kubernetes-id: tssc-app1-svc
+    argocd/app-name: py3ocp7ai-svc
+    janus-idp.io/tekton: py3ocp7ai-svc
+    backstage.io/kubernetes-id: py3ocp7ai-svc
     backstage.io/kubernetes-namespace: tssc-app
-    app.kubernetes.io/part-of: tssc-app1-svc
+    app.kubernetes.io/part-of: py3ocp7ai-svc
 spec:
   params:
     - name: dockerfile
@@ -31,7 +31,7 @@ spec:
     - name: image-expires-after
       value: 5d
     - name: output-image
-      value: "quay.io/opdev-tssc-demo/tssc-app1-img:{{revision}}"
+      value: "quay.io/org4rong/py3ocp7ai-img:{{revision}}"
     - name: path-context
       value: "."
     - name: revision
